Se realizaron varios cambios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes, este es mi sitio web, sígueme en instagram jonathangzv
+        Hola amigxs, este es mi sitio web, sígueme en instagram jonathangzv
     </p>   
 </body>
 </html>
